@@ -56,6 +56,12 @@ Task 138098 (Plugins Session Menu Items (Disable)) When using a session that
 - Use the last directory that a file was imported from when importing 
   additional files for binary fields.
 
+1742033: (Skipping quoting escape in table dropping) Refactoring plugin drop 
+table functionality now handles tables with embedded double quotes by doubling 
+the double quotes to allow the database to recognize the doubled quote as a 
+single quote which is part of the identifier. Thanks goes to Thomas Mueller 
+(from www.h2database.com) for contributing code to fix the issue)
+
 1731251: (Cryptic exceptions with DB2 JCC driver) Provides an API to allow 
 plugin authors to create and register custom exception formatters to be used 
 when displaying error messages and the like in the session message panel.
